{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 186,
  "lineage": "2bee29d0-aaf3-aebe-ea35-68b958a44f25",
  "resources": [
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0605b784a423975e5",
            "owner_id": "632199730033",
            "vpc_id": "vpc-025672db8cfe3056c"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e7cb8ca77fab0bc9",
            "owner_id": "632199730033",
            "vpc_id": "vpc-08bf105a356725e9f"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:loadbalancer/app/green/5f64833d462aa3a3",
            "arn_suffix": "app/green/5f64833d462aa3a3",
            "dns_name": "green-280625132.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:632199730033:loadbalancer/app/green/5f64833d462aa3a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "green",
            "security_groups": [
              "sg-073cfaa8e308d9ce2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-063f0e8c90ef54d56"
              },
              {
                "subnet_id": "subnet-0e84140ca0e684214"
              }
            ],
            "subnets": [
              "subnet-063f0e8c90ef54d56",
              "subnet-0e84140ca0e684214"
            ],
            "tags": {
              "Name": "green"
            },
            "vpc_id": "vpc-025672db8cfe3056c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.subnetsecurity",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:loadbalancer/app/blue/624f37188666d1ac",
            "arn_suffix": "app/blue/624f37188666d1ac",
            "dns_name": "blue-1034050812.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:632199730033:loadbalancer/app/blue/624f37188666d1ac",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blue",
            "security_groups": [
              "sg-0e8abdeffa9d12b15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0788cab3cbfae2ae8"
              },
              {
                "subnet_id": "subnet-0b7e6c7bafd60b7a2"
              }
            ],
            "subnets": [
              "subnet-0788cab3cbfae2ae8",
              "subnet-0b7e6c7bafd60b7a2"
            ],
            "tags": {
              "Name": "blue"
            },
            "vpc_id": "vpc-08bf105a356725e9f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.subnetsecurity",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:listener/app/green/5f64833d462aa3a3/1ab286a67cf6b036",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:targetgroup/green/ccfb3f34840ace81",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:632199730033:listener/app/green/5f64833d462aa3a3/1ab286a67cf6b036",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:loadbalancer/app/green/5f64833d462aa3a3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group_1"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:listener/app/blue/624f37188666d1ac/020fc76bb02f48a6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:targetgroup/blue/99af7800cb10986e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:632199730033:listener/app/blue/624f37188666d1ac/020fc76bb02f48a6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:loadbalancer/app/blue/624f37188666d1ac",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group_1"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group_1",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:targetgroup/green/ccfb3f34840ace81",
            "arn_suffix": "targetgroup/green/ccfb3f34840ace81",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:632199730033:targetgroup/green/ccfb3f34840ace81",
            "lambda_multi_value_headers_enabled": false,
            "name": "green",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-025672db8cfe3056c"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group_1",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:632199730033:targetgroup/blue/99af7800cb10986e",
            "arn_suffix": "targetgroup/blue/99af7800cb10986e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:632199730033:targetgroup/blue/99af7800cb10986e",
            "lambda_multi_value_headers_enabled": false,
            "name": "blue",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08bf105a356725e9f"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a57712b16a5c81a6",
            "owner_id": "632199730033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0605b784a423975e5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Routing Table"
            },
            "vpc_id": "vpc-025672db8cfe3056c"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-public",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01aced862895dd0b0",
            "owner_id": "632199730033",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7cb8ca77fab0bc9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Routing Table"
            },
            "vpc_id": "vpc-08bf105a356725e9f"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8827ede2c0d1a8d",
            "route_table_id": "rtb-0a57712b16a5c81a6",
            "subnet_id": "subnet-0e84140ca0e684214"
          },
          "depends_on": [
            "aws_route_table.route-public",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association_public",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0367fcc176619dc1e",
            "route_table_id": "rtb-01aced862895dd0b0",
            "subnet_id": "subnet-0788cab3cbfae2ae8"
          },
          "depends_on": [
            "aws_route_table.route-public",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "subnetsecurity",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:security-group/sg-073cfaa8e308d9ce2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073cfaa8e308d9ce2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190603212548892700000001",
            "name_prefix": null,
            "owner_id": "632199730033",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-025672db8cfe3056c"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "subnetsecurity",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:security-group/sg-0e8abdeffa9d12b15",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8abdeffa9d12b15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20190603212548818800000001",
            "name_prefix": null,
            "owner_id": "632199730033",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08bf105a356725e9f"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:subnet/subnet-063f0e8c90ef54d56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/18",
            "id": "subnet-063f0e8c90ef54d56",
            "map_public_ip_on_launch": false,
            "owner_id": "632199730033",
            "vpc_id": "vpc-025672db8cfe3056c"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:subnet/subnet-0b7e6c7bafd60b7a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.128.0/18",
            "id": "subnet-0b7e6c7bafd60b7a2",
            "map_public_ip_on_launch": false,
            "owner_id": "632199730033",
            "vpc_id": "vpc-08bf105a356725e9f"
          },
          "depends_on": [
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:subnet/subnet-0e84140ca0e684214",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0e84140ca0e684214",
            "map_public_ip_on_launch": true,
            "owner_id": "632199730033",
            "vpc_id": "vpc-025672db8cfe3056c"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:subnet/subnet-0788cab3cbfae2ae8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0788cab3cbfae2ae8",
            "map_public_ip_on_launch": true,
            "owner_id": "632199730033",
            "vpc_id": "vpc-08bf105a356725e9f"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.environment-example-two"
          ]
        }
      ]
    },
    {
      "module": "module.green1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "environment-example-two",
      "provider": "module.green1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:vpc/vpc-025672db8cfe3056c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074991fa3af3a440b",
            "default_route_table_id": "rtb-0511c49e3c32eeb5e",
            "default_security_group_id": "sg-065f3d783cbdb1b84",
            "dhcp_options_id": "dopt-f6576c8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-025672db8cfe3056c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0511c49e3c32eeb5e",
            "owner_id": "632199730033",
            "tags": {
              "Name": "terraform-aws-vpc-two"
            }
          }
        }
      ]
    },
    {
      "module": "module.blue1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "environment-example-two",
      "provider": "module.blue1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632199730033:vpc/vpc-08bf105a356725e9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ddd09cf2d9e5e30e",
            "default_route_table_id": "rtb-0865fdb37e314afc1",
            "default_security_group_id": "sg-0c78b2102530f9cc6",
            "dhcp_options_id": "dopt-f6576c8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08bf105a356725e9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0865fdb37e314afc1",
            "owner_id": "632199730033",
            "tags": {
              "Name": "terraform-aws-vpc-two"
            }
          }
        }
      ]
    }
  ]
}